# redhand-testgame

./: .gitignore  CMakeLists.txt  README.md  meson.build  redhand-testgame.kdev4
.kdev4/: redhand-testgame.kdev4
scripts/: build.sh  execute.sh  run.sh
src/: main.cpp  test_objects.cpp  test_objects.hpp  test_world.cpp
subprojects/: glib.wrap  redhand.wrap
